Picture cropping, super buggy but it works

--- a/app/assets/stylesheets/partials/_profile.css.scss
+++ b/app/assets/stylesheets/partials/_profile.css.scss
@@ -13,3 +13,7 @@
   }
 
 }
+
+#crop_modal {
+  img { max-width: initial; }
+}
